[KAP-162] Fix tool menu on small screens

--- a/KnowWE-Essentials/KnowWE-Resources/src/main/webapp/templates/default/skins/denkbares/skin.css
+++ b/KnowWE-Essentials/KnowWE-Resources/src/main/webapp/templates/default/skins/denkbares/skin.css
@@ -2632,7 +2632,6 @@ body.sidebar-resizing {
 
 /* do not hide page content on resize */
 .content.active .page {
-	min-width: unset;
 	width: 100%;
 }
 
